--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,3 +94,14 @@ input:checked + .slider:before {
 footer {
     text-align: center;
 }
+
+.profile {
+    width: 70%;
+    border-style:ridge;
+}
+
+.image {
+    width: 75%;
+    display: inline-block;
+    float: right;
+}
